force-app/main/default/objects/Customer_Feedback__c/Customer_Feedback__c.object-meta.xml
<CustomObject>



































    <label>Customer Feedback</label>

    <description>
        Stores customer feedback, including customer contact information, priority, and rating.
    </description>

    <nameField>
        <label>Customer Feedback Name</label>
        <type>Text</type>
    </nameField>

    <pluralLabel>Customer Feedbacks</pluralLabel>


    <sharingModel>ReadWrite</sharingModel>

</CustomObject>