force-app/main/default/objects/Customer_Feedback__c/fields/Customer_Online_Platform__c.field-meta.xml
<CustomField>
    <fullName>Customer_Online_Platform__c</fullName>
    <label>Customer Online Platform</label>
    <type>Url</type>
</CustomField>