force-app/main/default/objects/Customer_Feedback__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <description
  >Indicates whether the customer feedback record requires priority handling.</description>
    <defaultValue>false</defaultValue>
    <label>Priority</label>
    <type>Checkbox</type>
</CustomField>