force-app/main/default/objects/Customer_Feedback__c/fields/Rating__c.field-meta.xml
<CustomField>
    <fullName>Rating__c</fullName>
    <description
  >Customer rating from 1 to 5 indicating the level of satisfaction.</description>
    <label>Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>

            <value>
                <fullName>1</fullName>
            </value>

            <value>
                <fullName>2</fullName>
            </value>

            <value>
                <fullName>3</fullName>
            </value>

            <value>
                <fullName>4</fullName>
            </value>

            <value>
                <fullName>5</fullName>
            </value>

        </valueSetDefinition>
    </valueSet>
</CustomField>